<resources>
    <string name="app_name">Navigram</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_confirm_pass">Confirm Password</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome Back!"</string>
    <string name="dont_have_account">"Don't have account?"</string>
    <string name="Create_acc">"Create one"</string>
    <string name="Log_in">"Login"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_map">Map</string>
    <string name="title_search">Search</string>
    <string name="loadingImage">false</string>
    <string name="google_client_id">288851956695-usf73cr5teh53jk8trdneq0611gs2dmu.apps.googleusercontent.com</string>
    <string name="google_oauth_redirect">com.example.navigram:/oauth2redirect</string>
    <string name="google_oauth_scheme">com.example.navigram</string>

    <string name="BaseURL">https://api-navigram.aetherrflare.org </string>
    <string name="capture">Capture</string>
    <string name="switch_camera">Front camera</string>
    <!--    User Data-->
    <string name="username">username</string>


    <string name="share">Share</string>
    <string name="close">Close</string>
    <string name="more_options_description">More options</string>
    <string name="memory_image_description">Memory image</string>
    <string name="share_button_description">Share this memory</string>
    <string name="close_button_description">Close this memory</string>
    
    <!-- Memory options menu -->
    <string name="flag_memory">Flag Memory</string>
    <string name="flag_memory_title">Flag Inappropriate Content</string>
    <string name="flag_memory_message">Are you sure you want to flag this memory as inappropriate?</string>
    <string name="flag_memory_confirm">Flag</string>
    <string name="flag_memory_cancel">Cancel</string>
    
    <!-- Memory edit/delete options -->
    <string name="edit_memory">Edit Memory</string>
    <string name="delete_memory">Delete Memory</string>
    <string name="edit_memory_title">Edit Memory</string>
    <string name="edit_memory_message">Edit memory details</string>
    <string name="edit_memory_confirm">Save</string>
    <string name="edit_memory_cancel">Cancel</string>
    <string name="delete_memory_title">Delete Memory</string>
    <string name="delete_memory_message">Are you sure you want to delete this memory? This action cannot be undone.</string>
    <string name="delete_memory_confirm">Delete</string>
    <string name="delete_memory_cancel">Cancel</string>

</resources>
