<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@drawable/bgpurple"
    android:layout_height="match_parent"
    android:layout_margin="3dp"
    tools:context=".ui.SignUp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="105dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="32dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/black" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="5dp"
        android:text="Sign Up to start with NaviGram"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageButton
        android:id="@+id/loginWithGoogle"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@android:color/transparent"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/continuegoogle" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="10dp"
        android:text="- or continue with -"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginWithGoogle" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/prompt_email"
        android:background="@drawable/edit_text_border"
        android:hint="@string/prompt_email"
        android:textColorHint="#994B0082"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/prompt_username"
        android:background="@drawable/edit_text_border"
        android:hint="@string/prompt_username"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textColorHint="#994B0082"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/prompt_password"
        android:background="@drawable/edit_text_border"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColorHint="#994B0082"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="0dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="24dp"
        android:layout_height="45dp"
        android:autofillHints="@string/prompt_password"
        android:background="@drawable/edit_text_border"
        android:hint="@string/prompt_confirm_pass"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColorHint="#994B0082"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="32dp"
        android:enabled="true"
        android:text="@string/action_sign_up"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account?"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="@android:color/transparent"
            android:minHeight="0dp"
            android:padding="0dp"
            android:text="@string/Log_in"
            android:textAllCaps="false"
            android:textColor="#6633CC"
            android:textSize="16sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
